--- a/employees/webapp/view/App.view.xml
+++ b/employees/webapp/view/App.view.xml
@@ -1,13 +1,66 @@
-<mvc:View controllerName="logaligroup.employees.controller.App"
-    xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m">
+<mvc:View
+    controllerName="logaligroup.employees.controller.App"
+    xmlns="sap.m"
+    xmlns:mvc="sap.ui.core.mvc"
+    displayBlock="true"
+    xmlns:core="sap.ui.core"
+>
     <Shell id="shell">
-    <app id="app"> 
-    <Page id="page" title="{i18n>title}">
-        <content> 
-            <Text text="Hello World"/>
-        </content>
-    </Page>
-    </app>
+        <App id="app">
+            <pages>
+                <Page
+                    id="page"
+                    title="{i18n>title}"
+                >
+                    <content>
+                        <HBox id="Box">
+                            <Label
+                                id="labelEmployee"
+                                labelFor="inputEmployee"
+                                text="{i18n>labelEmployee}"
+                                class="sapUISmalllMargin"
+                            />
+                            <Input
+                                id="inputEmployee"
+                                maxLength="10"
+                                width="200px"
+                                class="sapUiSmallMarginEnd"
+                                liveChange="onValidate"
+                            />
+                            <Label
+                                id="labelCountry"
+                                labelFor="slCountry"
+                                text="{i18n>labelCountry}"
+                                class="sapUISmalllMargin"
+                                visible="false"
+                            />
+                            <Select
+                                id="slCountry"
+                                forceSelection="false"
+                                visible="false"
+                            >
+                                <items>
+                                    <core:Item
+                                        id="US"
+                                        key="US"
+                                        text="{i18n>countryUS}"
+                                    />
+                                    <core:Item
+                                        id="UK"
+                                        key="UK"
+                                        text="{i18n>countryUK}"
+                                    />
+                                    <core:Item
+                                        id="Es"
+                                        key="ES"
+                                        text="{i18n>countryES}"
+                                    />
+                                </items>
+                            </Select>
+                        </HBox>
+                    </content>
+                </Page>
+            </pages>
+        </App>
     </Shell>
 </mvc:View>
